recallable/tests/ui/derive_fail_recallable_unknown_parameter.rs
use recallable::Recallable;

#[derive(Recallable)]
struct InvalidRecallableParameter<T> {
    #[recallable(unknown)]
    value: T,
}

fn main() {}
